Fixed ProjectDetails gap on mobile

--- a/src/components/style/ProjectCard.css
+++ b/src/components/style/ProjectCard.css
@@ -1,6 +1,5 @@
  .ProjectCard {
-    /*background-color: #0D0D0D;*/
-    background-color: #ff0000;
+    background-color: #0D0D0D;
     width: 54.62vw;
     height: 18.83vw;
     border-radius: 3.8vw;
@@ -52,6 +51,12 @@
     width: 25.1vw;
     border-radius: 2vw;
 }
+.MotionDiv {
+    width: fit-content;
+    height: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+}
 @media (max-width: 768px) {
     .ProjectCard {
         width: 78.1vw;
@@ -69,7 +74,7 @@
         height: 61.83vw;
         padding-right: 1.78vw;
         padding-left: 1.78vw;
-        gap: 7.1vw;
+        gap: 10vw;
     }
     .ProjectInfo{
         width: 73.53vw;
